posiGen_FullsendBox/src/objects/Municipality__c.object
<CustomObject>
    <fields>
        <fullName>Building_Permit_Submission_Methods__c</fullName>
        <label>Building Permit Submission Methods</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Handles_Tax_Assessments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handles Tax Assessments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Size_01__c</fullName>
        <label>Household Size 01</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household_Size_02__c</fullName>
        <label>Household Size 02</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household_Size_03__c</fullName>
        <label>Household Size 03</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Municipality</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Child Municipalities</relationshipLabel>
        <relationshipName>ChildMunicipalities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permit_Instructions__c</fullName>
        <label>Permit Instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Permit_Issuing_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permit Issuing Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Assessment_Search_Website__c</fullName>
        <label>Property Assessment Search Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Municipality</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Household_Size_01__c</columns>
        <columns>Household_Size_02__c</columns>
        <columns>Household_Size_03__c</columns>
        <columns>Household_Size_04__c</columns>
        <columns>Household_Size_05__c</columns>
        <columns>Household_Size_06__c</columns>
        <columns>Household_Size_07__c</columns>
        <columns>Household_Size_08__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Municipality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Municipalities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>